# foundry-agents-lifecycle

./: .env.example  .gitignore  README.md  azure.yaml  mkdocs.yml  pyproject.toml
.azdo/pipelines/: cd-pipeline.yml  ci-pipeline.yml
.azdo/pipelines/templates/: deploy-stage.yml
.github/workflows/: cd.yml  ci.yml  docs.yml
config/: SCHEMA.md  agent-config.dev.json  agent-config.prod.json  agent-config.test.json
docs/: architecture.md  enterprise-guidance.md  how-it-works.md
docs-site/: architecture.md  faq.md  index.md
docs-site/advanced/: logic-apps.md  multi-subscription.md  portal-to-code.md
docs-site/concepts/: agent-definition.md  environment-configs.md  evaluation.md  mental-model.md
docs-site/getting-started/: prerequisites.md  quick-start.md
docs-site/infrastructure/: bicep.md  parameters.md
docs-site/pipelines/: azure-devops.md  github-actions.md  oidc-setup.md  overview.md
infra/: deploy-infra.bicep  main.bicep
infra/environments/: dev.parameters.json  prod.parameters.json  test.parameters.json
infra/modules/: foundry-account.bicep  keyvault.bicep  model-deployments.bicep
src/agent/: agent_definition.py
src/agent/prompts/: system_prompt.md  system_prompt.prod.md
src/agent/tools/: __init__.py  calculator.py
src/scripts/: deploy_agent.py  list_agents.py  run_evaluation.py  teardown_agent.py  test_agent.py
src/tests/integration/: eval_dataset.jsonl
src/tests/unit/: test_agent_config.py
